# snake-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  resources.qrc  resources.rc
android/: AndroidManifest.xml
include/: apple.h  direction.h  game_logic.h  palette.h  score.h  settings.h  snake.h  snake_field.h  snake_field_qml.h  snake_game.h  snake_game_qml.h  snake_score.h  snake_system.h  snakegame.h  sounds.h  sprites.h
qml/: CMakeLists.txt  Palette.qml  ScoreItem.qml  main.cpp  main.qml
src/: snake_game.cpp  snake_game_qml.cpp  snakegame.cpp
tests/: CMakeLists.txt  tst_direction.cpp  tst_logic.cpp  tst_score.cpp  tst_snake.cpp
